fix(styles): Button contrast on hover

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -126,6 +126,10 @@ button:hover {
   color: var(--clr-neutral-700);
 }
 
+.side-bar button:hover {
+  bac,m
+}
+
 .side-bar button * {
   color: inherit;
 }
